# verybasic

./: .gitignore  Cargo.toml  README.md  settings.json
basic_games/: aceyducey.vbas
samples/: bowls.vbas  command.vbas  fib.vbas  golf.vbas  guess.vbas  horses.txt  horses.vbas  input.vbas  mandle.vbas  monopoly.vbas  test.vbas  wordlist.txt
src/: common.rs  compiler.rs  main.rs  scanner.rs  vm.rs
src/vm/: array_functions.rs  functions.rs  graphics.rs  string_functions.rs
