[package]
name = "vbas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
glob = "0.3.1"
rand = "0.8.5"
raqote = "0.8.2"
minifb = "0.24.0"
hex = "0.4.3"
clap = { version = "4.3.11", features = ["derive"] }
num-runtime-fmt = "0.1.2"